# Always_try_to_learn

./: MULTI_LANGUAGE_SETUP.md  README.md
DDIA-in-real/: .cursorrules  .gitignore  README.md  main.py  pyproject.toml
DDIA-in-real/patterns/: __init__.py
DDIA-in-real/patterns/data_ingestion/: README.md  __init__.py  append_only_writer.py  append_only_writer_config.yaml  change_data_capture.py  change_data_capture_config.yaml  idempotent_writer.py  idempotent_writer_config.yaml  transactional_writer.py  transactional_writer_config.yaml  upsert_writer.py  upsert_writer_config.yaml
DDIA-in-real/patterns/data_quality/: __init__.py
DDIA-in-real/patterns/observability/: __init__.py
DDIA-in-real/patterns/schema_evolution/: __init__.py
DDIA-in-real/patterns/security_and_governance/: __init__.py
DDIA-in-real/patterns/time_and_lateness/: __init__.py
DDIA-in-real/patterns/updates/: __init__.py
DDIA-in-real/patterns/utils/: __init__.py  simple_db.py
DDIA-in-real/scripts/: run_demos.py
DDIA-in-real/tests/test_patterns/: __init__.py
DDIA-in-real/tests/test_patterns/data_ingestion/: test_transactional_writer.py
Data-QA-engineer/: .env.example  .gitignore  README.md  pyproject.toml
Data-QA-engineer/.cursor/rules/: requirement.mdc
Data-QA-engineer/configs/: config.yaml
Data-QA-engineer/data/: orders.csv  product_inventory.csv
Data-QA-engineer/src/data_pipeline/: models.py  process.py  processor.py  rules.py
Data-QA-engineer/src/data_pipeline/utils/: cli.py  dates.py  generator.py  io.py  logging_setup.py  settings.py
Data-QA-engineer/tests/: test_processing.py  test_rules.py
from-zero-to-smallest-transformer/: Cargo.toml  LICENSE  Makefile  README.md  USAGE.md
from-zero-to-smallest-transformer/src/: main.rs
from-zero-to-smallest-transformer/src/math/: activation.rs  matrix.rs  mod.rs  vector.rs
from-zero-to-smallest-transformer/src/nn/: attention.rs  feed_forward.rs  layer_norm.rs  linear.rs  mod.rs
from-zero-to-smallest-transformer/src/training/: loss.rs  mod.rs  optimizer.rs  trainer.rs
from-zero-to-smallest-transformer/src/transformer/: decoder.rs  encoder.rs  mod.rs  transformer.rs
jax/: .cursorrules  .gitignore  Makefile  QUICKSTART.md  README.md  SETUP_SUMMARY.md  USAGE.md  basic_example.py  matrix_example.py  pyproject.toml  run_basic.sh  verify_jax.py
streamming_lab/: README.md  docker-compose.yml
streamming_lab/spark-lab/: docker-compose.yml  submit.sh
streamming_lab/spark-lab/spark-batch/: pom.xml
streamming_lab/spark-syntax/: README.md  pyproject.toml
streamming_lab/spark-syntax/round-01/: exercise.py  solution.py
streamming_lab/spark-syntax/round-02/: exercise.py  solution.py
streamming_lab/spark-syntax/round-03/: exercise.py  solution.py
streamming_lab/spark-syntax/round-04/: exercise.py  solution.py
streamming_lab/spark-syntax/round-05/: exercise.py  solution.py
streamming_lab/spark-syntax/round-06/: exercise.py  solution.py
streamming_lab/spark-syntax/round-07/: exercise.py  solution.py
streamming_lab/spark-syntax/round-08/: exercise.py  solution.py
streamming_lab/spark-syntax/round-09/: exercise.py  solution.py
streamming_lab/spark-syntax/round-10/: exercise.py  solution.py
(+21 files in other folders)
