[package]
name = "from-zero-to-smallest-transformer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Building a transformer from scratch in Rust without any third-party dependencies"
license = "MIT"

[dependencies]
# No third-party dependencies - pure Rust standard library

[[bin]]
name = "transformer"
path = "src/main.rs"
